# CocoB

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cocob.sh  docker-compose.yml  plan.md  project-plan.md  pyproject.toml  requirements.md  skillforge.sh
.github/: CODEOWNERS  pull_request_template.md
config/: config.example.py  mcp_config.example.json  mcp_config.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  EMAIL_CALENDAR_SETUP.md  GRADIO_UI.md  LLM_PROVIDERS.md  MCP_SETUP.md  MEMORY_SYSTEM.md  MS_TEAMS_SETUP.md  QA_CHECKLIST.md  SECURITY.md  SETUP_GUIDE.md  SKILLFORGE_ARCHITECTURE.md  SKILLFORGE_QA.md  TELEGRAM_SETUP.md  WHATSAPP_SETUP.md  WHATSAPP_TECHNICAL.md  comp_openclaw.md  feature_list.md  plan_multiagent.md  read_me_claude.md  todo.md
scripts/: qa_test_framework.py  rebuild_launch_services.sh  test_local.py
skills/: schedule.md
tests/: test_admin_login.py  test_auth_manager.py  test_auto_skill_creation.py  test_background_tasks.py  test_channel_images.py  test_channel_outbound.py  test_claude_cli.py  test_clawhub.py  test_cli.py  test_file_access.py  test_file_access_timing.py  test_flet_app.py  test_heartbeat_manager.py  test_identity_resolver.py  test_image_gen_handler.py  test_image_handler.py  test_imports.py  test_integration_chat.py  test_mcp_manager.py  test_mcp_security.py  test_pattern_detector.py  test_permission_requests.py  test_personas.py  test_router.py  test_router_image_integration.py  test_schedule_handler.py  test_scheduler.py  test_session_key_namespace.py  test_web_tools.py  (+8 more)
(+207 files in other folders)
